--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,8 +81,8 @@ members = [
 
 [workspace.dependencies]
 alloc_tracker = { path = "components/alloc_tracker" }
-arrow = { version = "43.0.0", features = ["prettyprint"] }
-arrow_ipc = { version = "43.0.0" }
+arrow = { git = "https://github.com/ShiKaiWi/arrow-rs.git", rev = "d4e905a6cc337f10c61f47d75f264df82fc97242", features = ["prettyprint"] }
+arrow_ipc = { git = "https://github.com/ShiKaiWi/arrow-rs.git", rev = "d4e905a6cc337f10c61f47d75f264df82fc97242" }
 arrow_ext = { path = "components/arrow_ext" }
 analytic_engine = { path = "analytic_engine" }
 arena = { path = "components/arena" }
@@ -102,8 +102,8 @@ clru = "0.6.1"
 cluster = { path = "cluster" }
 criterion = "0.5"
 common_types = { path = "common_types" }
-datafusion = { git = "https://github.com/CeresDB/arrow-datafusion.git", rev = "9c3a537e25e5ab3299922864034f67fb2f79805d" }
-datafusion-proto = { git = "https://github.com/CeresDB/arrow-datafusion.git", rev = "9c3a537e25e5ab3299922864034f67fb2f79805d" }
+datafusion = { git = "https://github.com/ShiKaiWi/arrow-datafusion.git", rev = "f4440be8f9c4a50f5e2e8224e18c498c12da37ee" }
+datafusion-proto = { git = "https://github.com/ShiKaiWi/arrow-datafusion.git", rev = "f4440be8f9c4a50f5e2e8224e18c498c12da37ee" }
 df_operator = { path = "df_operator" }
 df_engine_extensions = { path = "df_engine_extensions" }
 future_ext = { path = "components/future_ext" }
@@ -115,10 +115,10 @@ hash_ext = { path = "components/hash_ext" }
 hex = "0.4.3"
 hyperloglog = { git = "https://github.com/jedisct1/rust-hyperloglog.git", rev = "425487ce910f26636fbde8c4d640b538431aad50" }
 id_allocator = { path = "components/id_allocator" }
-influxql-logical-planner = { git = "https://github.com/CeresDB/influxql.git", rev = "a905863", package = "iox_query_influxql" }
-influxql-parser = { git = "https://github.com/CeresDB/influxql.git", rev = "a905863", package = "influxdb_influxql_parser" }
-influxql-query = { git = "https://github.com/CeresDB/influxql.git", rev = "a905863", package = "iox_query" }
-influxql-schema = { git = "https://github.com/CeresDB/influxql.git", rev = "a905863", package = "schema" }
+influxql-logical-planner = { git = "https://github.com/ShiKaiWi/influxql.git", rev = "309590aacf39939b007abbfa29bfd2237ab5f40a", package = "iox_query_influxql" }
+influxql-parser = { git = "https://github.com/ShiKaiWi/influxql.git", rev = "309590aacf39939b007abbfa29bfd2237ab5f40a", package = "influxdb_influxql_parser" }
+influxql-query = { git = "https://github.com/ShiKaiWi/influxql.git", rev = "309590aacf39939b007abbfa29bfd2237ab5f40a", package = "iox_query" }
+influxql-schema = { git = "https://github.com/ShiKaiWi/influxql.git", rev = "309590aacf39939b007abbfa29bfd2237ab5f40a", package = "schema" }
 interpreters = { path = "interpreters" }
 itertools = "0.10.5"
 lz4_flex = { version = "0.11", default-features = false, features = ["frame"] }
@@ -135,7 +135,7 @@ panic_ext = { path = "components/panic_ext" }
 partitioned_lock = { path = "components/partitioned_lock" }
 partition_table_engine = { path = "partition_table_engine" }
 parquet_ext = { path = "components/parquet_ext" }
-parquet = { version = "43.0.0" }
+parquet = { git = "https://github.com/ShiKaiWi/arrow-rs.git", rev = "d4e905a6cc337f10c61f47d75f264df82fc97242" }
 paste = "1.0"
 pin-project-lite = "0.2.8"
 pprof = "0.12.1"
